# mariadb-columnstore-api

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  mcsapi.files  mcsapi.includes  version.h
cmake/: FindMySQL.cmake  (+7 more)
dotnet/: CMakeLists.txt  README.md  build.sh  clean.sh  dotnet_mcsapi.i
dotnet/example/: CpImport.cs  CpImport.csproj  Program.cs  README.md
dotnet/src/: ColumnStoreDotNet.csproj
dotnet/test/: ColumnStoreDotNetTest.csproj  ColumnStoreDriverTest.cs
example/: Advanced_bulk_insert.java  Basic_bulk_insert.java  CMakeLists.txt  ExportDataFrame.py  advanced_bulk_insert.cpp  advanced_bulk_insert.py  advanced_bulk_insert.sql  basic_bulk_insert.cpp  basic_bulk_insert.py  basic_bulk_insert.sql  bulk_insert.cpp
example/CpImport/: Readme.md  build.gradle  settings.gradle
example/ExportDataFrame/: README.md  build.sbt
java/: CMakeLists.txt  Readme.md  build.gradle  javamcsapi.i  settings.gradle
java/docs/: CMakeLists.txt  changelog.rst  compiling.rst  conf.py.in  latex_usage.rst  license.rst  sources.cmake.in
java/docs/reference/: ColumnStoreBufferError.rst  ColumnStoreBulkInsert.rst  ColumnStoreConfigError.rst  ColumnStoreDataError.rst  ColumnStoreDateTime.rst  ColumnStoreDecimal.rst  ColumnStoreDriver.rst  ColumnStoreError.rst  ColumnStoreException.rst  ColumnStoreInternalError.rst  ColumnStoreNetworkError.rst  ColumnStoreNotFound.rst  ColumnStoreServerError.rst  ColumnStoreSummary.rst  ColumnStoreSystemCatalog.rst  ColumnStoreSystemCatalogColumn.rst  ColumnStoreSystemCatalogTable.rst  ColumnStoreTime.rst  ColumnStoreUsageError.rst  ColumnStoreVersionError.rst  SWIGTYPE_p_tm.rst  TableLockInfo.rst  TableLockInfoVector.rst  columnstore_data_convert_status_t.rst  columnstore_data_types_t.rst  columnstore_lock_types_t.rst  dbRootListVector.rst  index.rst  javamcsapi.rst  javamcsapiJNI.rst
java/docs/usage/: advanced_bulk_insert.rst  basic_bulk_insert.rst  index.rst  introduction.rst
java/test/: compatibility_test.sh
java/test/clearTableLockTest/: build.gradle  settings.gradle
java/test/compatibility_test/: compatibility_test.sh
libmcsapi/: CMakeLists.txt  mcsapi.h  mcsapi_bulk.h  mcsapi_driver.h  mcsapi_exception.h  mcsapi_types.h  visibility.h
mcsimport/: 3rd party licenses.txt  CMakeLists.txt  README.md  mcsimport.cpp
mcsimport/test/: .gitignore  README.md  requirements.txt  test.py
mcsimport/test/alt_columnstore_con/: DDL.sql  config.yaml  mapping.yaml  prepare.py
mcsimport/test/bool_transformation/: DDL.sql  config.yaml  expected.csv  input.csv
mcsimport/test/boundary/: DDL.sql  config.yaml  input.csv
mcsimport/test/date_format_1/: DDL.sql  config.yaml  input.csv
mcsimport/test/date_format_2/: DDL.sql  config.yaml  input.csv  mapping.yaml
mcsimport/test/date_format_3/: DDL.sql  config.yaml  expected.csv  input.csv  mapping.yaml
mcsimport/test/date_format_4/: DDL.sql  config.yaml  mapping.yaml
mcsimport/test/date_format_5/: DDL.sql  config.yaml  mapping.yaml
mcsimport/test/date_format_6/: DDL.sql  config.yaml  mapping.yaml
mcsimport/test/date_format_7/: DDL.sql  config.yaml  expected.csv  input.csv  mapping.yaml
mcsimport/test/default_map_expl/: DDL.sql  config.yaml  mapping.yaml
mcsimport/test/default_map_impl/: DDL.sql  config.yaml  input.csv  mapping.yaml
mcsimport/test/enclose_1/: DDL.sql  config.yaml  input.csv
mcsimport/test/enclose_2/: DDL.sql  config.yaml  input.csv
mcsimport/test/enclose_3/: DDL.sql  config.yaml  expected.csv  input.csv
mcsimport/test/enclose_4/: DDL.sql  config.yaml  expected.csv  input.csv
mcsimport/test/enclose_5/: DDL.sql  config.yaml  input.csv
mcsimport/test/header_1/: DDL.sql  config.yaml  input.csv
mcsimport/test/implicit_cs_csv/: DDL.sql  config.yaml  input.csv
mcsimport/test/implicit_csv_cs/: DDL.sql  config.yaml  expected.csv  input.csv
mcsimport/test/implicit_df_non_mp/: DDL.sql  config.yaml  expected.csv
mcsimport/test/load/: DDL.sql  config.yaml  prepare.py
mcsimport/test/load_2/: DDL.sql  config.yaml  prepare.py
mcsimport/test/malformed_csv_1/: DDL.sql  config.yaml
mcsimport/test/malformed_csv_2/: DDL.sql  config.yaml  expected.csv  input.csv
mcsimport/test/mapping_explicit_1/: DDL.sql  config.yaml  expected.csv
mcsimport/test/mapping_explicit_2/: DDL.sql  config.yaml  expected.csv  input.csv  mapping.yaml
mcsimport/test/mapping_explicit_3/: DDL.sql  config.yaml  input.csv  mapping.yaml
mcsimport/test/mapping_explicit_4/: DDL.sql  config.yaml  expected.csv  mapping.yaml
mcsimport/test/mapping_explicit_5/: DDL.sql  config.yaml  expected.csv  mapping.yaml
python/: CMakeLists.txt  Readme.md  cpimport.py  pymcsapi.cpp  pymcsapi.i  setup.py  setup.py.in  test.py
python/docs/: CMakeLists.txt  changelog.rst  conf.py.in  index.rst  latex_usage.rst  license.rst  sources.cmake.in
python/python2/: CMakeLists.txt
python/python3/: CMakeLists.txt
python/test/: test_basic.py  test_exception.py  test_million_row.py  test_status.py  test_tableLocks.py
spark-connector/python/: CMakeLists.txt  README.md  benchmark.sh  columnStoreExporter.py  mcsapi_reserved_words.txt  sparkPythonMcsapiConnector.py
spark-connector/scala/: CMakeLists.txt  README.md  build.gradle  build.sbt  settings.gradle
src/: CMakeLists.txt  common.h  mcsapi_bulk.cpp  mcsapi_bulk_impl.h  mcsapi_driver.cpp  mcsapi_driver_impl.h  mcsapi_types.cpp  mcsapi_types_impl.h  util_commands.cpp  util_commands.h  util_dataconvert.cpp  util_dataconvert.h  util_debug.cpp  util_debug.h  util_messaging.cpp  util_messaging.h  util_network.cpp  util_network.h  util_structures.cpp  util_structures.h
src/WIN32/: time.cpp  time.h  times.h
test/: CMakeLists.txt  bad-usage.cpp  chained.cpp  char4.cpp  commit.cpp  common.cpp  common.h  dataconvert-datetime.cpp  dataconvert-decimal.cpp  dataconvert-double.cpp  dataconvert-int.cpp  dataconvert-null.cpp  dataconvert-status.cpp  dataconvert-string.cpp  dataconvert-time.cpp  mcol1154.cpp  mcol1160.cpp  mcol1408.cpp  mcol1563.cpp  mcol1662.cpp  mcol1792.cpp  million-row.cpp  summary.cpp  system-catalog.cpp  tableLocks.cpp  truncation.cpp  version.cpp
(+184 files in other folders)
